Carousel behaviour js

--- a/basic_carousel.html
+++ b/basic_carousel.html
@@ -16,36 +16,18 @@
 		<div id="carousel">
 			<!-- carousel item -->
 			<ul class="items">
-			  <li>
-				<a href="instructions.html"><img src="public/images/test_carousel_image_1.jpg" /></a>
-				<a href="instructions.html"><h3>Business</a></h3>
-				<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-			  </li>
-			   <li>
-				<a href="instructions.html"><img src="public/images/test_carousel_image_2.jpg" /></a>
-				<a href="instructions.html"><h3>Special Deals</a></h3>
-				<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-			  </li>
-			  <li>
-				<a href="instructions.html"><img src="public/images/test_carousel_image_3.jpg" /></a>
-				<a href="instructions.html"><h3>Cuisine</a></h3>
-				<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-			  </li>
-			  <li>
-				<a href="instructions.html"><img src="public/images/test_carousel_image_4.jpg" /></a>
-				<a href="instructions.html"><h3>Manage</a></h3>
-				<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-			  </li>
+
 			</ul>
 
 			<!-- carousel controls -->
 			<div class="controls">
 				<ul>
-					<li><a href="#">Previous</a></li>
-					<li><a href="#1">1</a></li>
+					<li><a class="nav" id="#leftNav" href="#">Previous</a></li>
+					<!-- <li><a href="#1">1</a></li>
 					<li><a href="#2">2</a></li>
-					<li><a href="#3">3</a></li>
-					<li><a href="#">Next</a></li>
+					<li><a href="#3">3</a></li> -->
+                    <li><ul class="buttons"></ul></li>
+					<li><a class="nav" id="#rightNav" href="#">Next</a></li>
 				</ul>
 			</div>
 
