css customisation and fine tuning bullets selection

--- a/basic_carousel.html
+++ b/basic_carousel.html
@@ -4,36 +4,25 @@
     <title>Basic carousel test</title>
 	<link rel="stylesheet" href="public/css/style.css" type="text/css" media="all" />
     <script src="public/js/jquery-2.1.4.min.js" charset="utf-8"></script>
-    <script src="public/js/app.js" charset="utf-8"></script>
+    <script src="public/js/app.min.js" charset="utf-8"></script>
 
   </head>
   <body><div class="content">
 	<div id="instructions">
 		<h1>Basic carousel test</h1>
-		<p><a href="instructions.html">Instructions</a></p>
-
 
 		<div id="carousel">
 			<!-- carousel item -->
 			<ul class="items">
-
 			</ul>
-
 			<!-- carousel controls -->
 			<div class="controls">
 				<ul>
-					<li><a class="nav" id="#leftNav" href="#">Previous</a></li>
-					<!-- <li><a href="#1">1</a></li>
-					<li><a href="#2">2</a></li>
-					<li><a href="#3">3</a></li> -->
+					<li><a class="nav" id="leftNav" href="#"></a></li>
                     <li><ul class="buttons"></ul></li>
-					<li><a class="nav" id="#rightNav" href="#">Next</a></li>
+					<li><a class="nav" id="rightNav" href="#"></a></li>
 				</ul>
 			</div>
-
-
-
-
 		</div>
 		<div class="clear"></div>
 	</div>
